<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.choibowon.deliveryservice.OrderActivity"
    android:background="#9ED6C0">

    <Button
        android:id="@+id/button"
        android:layout_width="84dp"
        android:layout_height="75dp"
        android:layout_marginLeft="160dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/two" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginTop="20dp"
        android:background="@android:color/background_light"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="1">

                <TextView
                    android:id="@+id/menuName3"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="5dp"
                    android:text="슴슴한 낙지덮밥"
                    android:textSize="25dp"
                    android:textStyle="bold"
                    android:layout_weight="0.63" />

                <Button
                    android:layout_width="75dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/삭제" />


            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="22dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/가격3"
                    android:textSize="20dp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="53dp"
                        android:layout_marginLeft="22dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/수량"
                        android:textSize="20dp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/edittext3"
                        android:inputType="number"
                        android:layout_width="100dp"
                        android:layout_height="53dp"
                        android:layout_marginLeft="120dp"
                        android:layout_marginTop="10dp" />

                    <Button
                        android:id="@+id/ok3"
                        android:layout_width="53dp"
                        android:layout_height="53dp"
                        android:text="@string/확인"/>



                </LinearLayout>


            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="10dp"
                android:layout_height="53dp"
                android:layout_marginLeft="22dp"
                android:layout_marginTop="10dp"
                android:layout_weight="0.89"
                android:text="@string/소계"
                android:textColor="@color/colorAccent"
                android:textSize="20dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textview3"
                android:layout_width="100dp"
                android:layout_height="48dp"
                android:layout_marginTop="10dp"
                android:layout_weight="0.14"
                android:textColor="@color/colorAccent"
                android:textSize="20dp"
                android:textStyle="bold" />


        </LinearLayout>


    </LinearLayout>

    <Button
        android:id="@+id/orderbutton3"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_width="150dp"
        android:layout_height="70dp"
        android:text="@string/주문완료"
        android:background="#F5F0C5"
        android:textSize="15dp"
        android:textStyle="bold"/>
</LinearLayout>